# Wire

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  Make.ps1  Makefile  README.md  SETUP.md  SPEC.MD  alembic.ini  bootstrap-twitter.ps1  docker-compose.yml  pyproject.toml  upload-to-server.ps1
.claude/: settings.json  settings.local.json
.claude/commands/: wire-inspect.md
.claude/skills/wire-deploy/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
data/: config.yaml.example  repos.yaml.example
docs/: feature-last-draft-commands.md
scripts/: inspect_payload.py
src/wire/: __init__.py  config.py  health.py  main.py
src/wire/db/: __init__.py  models.py  session.py
src/wire/digest/: __init__.py  builder.py
src/wire/drafting/: __init__.py  drafter.py
src/wire/events/: format.py
src/wire/ingestion/: __init__.py  filters.py  github_client.py  poller.py  readme_fetcher.py  (+1 more)
tests/: conftest.py  test_budget.py  test_chat_agent.py  test_config.py  test_db.py  test_digest.py  test_drafting.py  test_e2e.py  test_enrichment.py  test_filters.py  test_github_client.py  test_intent.py  test_llamacpp_provider.py  test_persona_rewrite.py  test_poller_first_run.py  test_prompt_building.py  test_provider_fallback.py  test_readme_fetcher.py  test_repo_names.py  test_revise_draft.py  test_sessions.py  test_smoke.py  test_state_script.py  test_state_snapshot.py  test_status_brain.py  test_telegram_handlers.py  test_triage_repo_notes.py  test_twitter.py  test_voice.py
(+44 files in other folders)
