[project]
name = "wire"
version = "0.1.0"
description = "Self-hosted build-in-public bot: GitHub activity → drafted X posts → Telegram approval → posted."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Johan Bellander" },
]
license = { text = "Apache-2.0" }
dependencies = [
    "python-telegram-bot[ext]>=21,<22",
    "anthropic>=0.40",
    "httpx>=0.28.1",
    "gidgethub>=5.3",
    "apscheduler>=3.10,<4",
    "sqlalchemy>=2.0",
    "alembic>=1.18.4",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "tenacity>=9.0",
    "structlog>=24.4",
    "tweepy>=4.14",
    "aiohttp>=3.13.5",
    "cryptography>=43",
    "pyjwt>=2.8",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "freezegun>=1.5",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "detect-secrets>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wire"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["wire"]
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
